--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -39,6 +39,20 @@ a {
     font-weight: 600;
 }
 
+.text-desc {
+    color: #9da6a5;
+    font-size: 1.8rem;
+    line-height: 1.77;
+}
+
+.group {
+    color: #767e7e;
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: normal;
+    margin-bottom: 18px;
+}
+
 /* ========== Header ========== */
 
 header {
@@ -101,26 +115,15 @@ ul {
     padding: 20px 0 79px 0;
 }
 
-.info .sub-title {
-    color: #767e7e;
-    font-size: 1.4rem;
-    font-weight: 400;
-    line-height: normal;
-}
-
 .info .title {
     color: #0d1111;
     font-size: 6.2rem;
     font-weight: 700;
     line-height: 1.16;
-    margin-top: 18px;
 }
 
 .info .desc {
     width: 79%;
-    color: #9da6a5;
-    font-size: 1.8rem;
-    line-height: 1.77;
     margin-top: 46px;
 }
 
@@ -297,4 +300,56 @@ ul {
 /* ========== Feature ========== */
 
 .feature {
+    padding-top: 130px;
+    padding-bottom: 130px;
+}
+
+.feature .feature-title {
+    color: #0d1111;
+    font-size: 4.2rem;
+    font-weight: 700;
+    line-height: 1.33;
+    max-width: 577px;
+    margin-bottom: 18px;
+}
+
+.feature .desc {
+    max-width: 590px;
+}
+
+.feature .selection {
+    margin-top: 80px;
+}
+
+.feature .list {
+    display: flex;
+    justify-content: space-between;
+}
+
+.feature .item {
+}
+
+.feature .title {
+    color: #0d1111;
+    font-size: 2rem;
+    font-weight: 600;
+    line-height: normal;
+    margin-top: 26px;
+    margin-bottom: 16px;
+}
+
+.feature .desc-lv1 {
+    color: #9da6a5;
+    font-size: 1.6rem;
+    font-weight: 400;
+    line-height: 1.68;
+    max-width: 168px;
+}
+
+.feature .item:nth-of-type(2) .desc-lv1 {
+    max-width: 223px;
+}
+
+.feature .item:nth-of-type(3) .desc-lv1 {
+    max-width: 224px;
 }
