--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -53,6 +53,20 @@ a {
     margin-bottom: 18px;
 }
 
+.title-lv2 {
+    color: #0d1111;
+    font-size: 4.2rem;
+    font-weight: 700;
+    line-height: 1.33;
+}
+
+.title-lv3 {
+    color: #0d1111;
+    font-size: 2rem;
+    font-weight: 600;
+    line-height: normal;
+}
+
 /* ========== Header ========== */
 
 header {
@@ -122,7 +136,7 @@ ul {
     line-height: 1.16;
 }
 
-.info .desc {
+.hero .info .desc {
     width: 79%;
     margin-top: 46px;
 }
@@ -300,15 +314,11 @@ ul {
 /* ========== Feature ========== */
 
 .feature {
-    padding-top: 130px;
+    padding-top: 65px;
     padding-bottom: 130px;
 }
 
 .feature .feature-title {
-    color: #0d1111;
-    font-size: 4.2rem;
-    font-weight: 700;
-    line-height: 1.33;
     max-width: 577px;
     margin-bottom: 18px;
 }
@@ -329,11 +339,7 @@ ul {
 .feature .item {
 }
 
-.feature .title {
-    color: #0d1111;
-    font-size: 2rem;
-    font-weight: 600;
-    line-height: normal;
+.feature .item-title {
     margin-top: 26px;
     margin-bottom: 16px;
 }
@@ -352,4 +358,128 @@ ul {
 
 .feature .item:nth-of-type(3) .desc-lv1 {
     max-width: 224px;
+}
+
+/* ======== course ========== */
+
+.course {
+    padding-top: 65px;
+}
+
+.course .course-title {
+    margin-bottom: 19px;
+}
+
+.course .course-desc {
+    max-width: 525px;
+}
+
+.course .intro {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 79px;
+}
+
+.course .cta-btn {
+    color: #1ebfc1;
+    font-size: 1.4rem;
+    font-weight: 700;
+    line-height: normal;
+    text-decoration-line: underline;
+}
+
+.course .course-list {
+    display: flex;
+    gap: 47px;
+}
+
+.course .item {
+    width: 33%;
+}
+
+.course .thumb {
+    width: 100%;
+    height: 393px;
+    object-fit: cover;
+    border-radius: 8px;
+    opacity: 0.3499999940395355;
+    background: #d0efed;
+}
+
+.course .thumb:hover {
+    opacity: 1;
+    transition: opacity 0.5s;
+}
+
+.course .info {
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;
+    border-radius: 8px;
+    background: #fff;
+    box-shadow: 0px 16px 90px 0px rgba(0, 0, 0, 0.05);
+    transform: translateY(-71px);
+}
+
+.course .info .wrap-item {
+    padding: 18px 25px 19px 25px;
+}
+
+.course .info .title-item {
+    color: #0d1111;
+    font-family: Poppins;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.course .info .price {
+    color: #767e7e;
+    font-family: Poppins;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin: 16px 0 6px;
+}
+
+.course .info .price strong {
+    color: #0d1111;
+    font-family: Poppins;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.course .info .desc,
+.course .info .info-text {
+    color: #9da6a5;
+    font-family: Poppins;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.course .info-item {
+    display: flex;
+    margin-top: 18px;
+}
+
+.course .info-item .info-text {
+    display: flex;
+    align-items: center;
+    margin-right: 10px;
+}
+
+.course .info-item .info-text::before {
+    content: "";
+    display: inline-block;
+    width: 6px;
+    height: 6px;
+    background: #1ebfc1;
+    border-radius: 50%;
+    margin-right: 8px;
 }
