--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -506,6 +506,7 @@ ul {
 
 .feedback {
     padding-top: 132px;
+    padding-bottom: 130px;
 }
 
 .feedback .wrap-feedback {
@@ -515,7 +516,7 @@ ul {
     color: #5d6564;
     font-size: 3.2rem;
     font-weight: 400;
-    line-height: 1.5; /* 150% */
+    line-height: 1.5;
     max-width: 419px;
     margin-top: 27px;
 }
@@ -572,6 +573,142 @@ ul {
 .feedback .action {
 }
 
+.feedback .wrap {
+    position: relative;
+    display: flex;
+}
+
 .feedback .feedback-avatar {
-    display: none;
+}
+
+.feedback .feedback-avatar .avatar {
+    width: 78px;
+    height: 78px;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.feedback .feedback-avatar .avatar:nth-child(1) {
+    position: absolute;
+    width: 235px;
+    height: 235px;
+    right: 171px;
+    top: 107px;
+}
+
+.feedback .feedback-avatar .avatar:nth-child(2) {
+    position: absolute;
+    width: 110px;
+    height: 110px;
+    right: 0;
+    top: 19px;
+}
+
+.feedback .feedback-avatar .avatar:nth-child(3) {
+    position: absolute;
+    width: 110px;
+    height: 110px;
+    right: 443px;
+    top: 0;
+}
+
+.feedback .feedback-avatar .avatar:nth-child(4) {
+    position: absolute;
+    right: 601px;
+    top: 258px;
+}
+
+.feedback .feedback-avatar .avatar:nth-child(5) {
+    position: absolute;
+    right: 389px;
+    bottom: 0;
+}
+
+.feedback .feedback-avatar .avatar:nth-child(6) {
+    position: absolute;
+    right: 32px;
+    bottom: 29px;
+}
+
+/* ========= CTA =========== */
+
+.cta {
+    background: #def6f5;
+    padding-top: 76px;
+    padding-bottom: 88px;
+}
+
+.cta .main-content {
+    display: flex;
+    align-items: center;
+}
+
+.cta .main-content .text-desc {
+    margin-top: 18px;
+}
+
+.cta .btn {
+    margin-left: auto;
+    margin-right: 18%;
+}
+
+/* ======= footer ========= */
+
+.footer {
+    padding: 130px 0 50px;
+}
+
+.footer .row {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer .row .column:nth-child(1) {
+    width: 23%;
+}
+
+.footer .row .column:nth-child(2) {
+    width: 20%;
+}
+
+.footer .row .column:nth-child(3) {
+    width: 22%;
+}
+
+.footer .row .column:nth-child(4) {
+    width: 25%;
+}
+
+.footer .title-footer {
+    color: #2e2e2e;
+    font-size: 1.8rem;
+    font-weight: 500;
+    line-height: normal;
+    margin-bottom: 25px;
+}
+
+.footer .list {
+    display: flex;
+    flex-direction: column;
+}
+
+.footer .item img {
+    margin-right: 9px;
+}
+
+.footer .item ~ .item {
+    margin-top: 18px;
+}
+
+.footer .item a {
+    display: flex;
+    color: #535353;
+    font-size: 1.6rem;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.footer .copyright {
+    text-align: center;
+    margin-top: 80px;
 }
